examples/test/testpolicy3214.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3214
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key14: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value25
          key0: value24
      podSelector:
        matchLabels:
          key14: value43
          key49: value35
